k8s/longhorn/longhorn-ingress.yml
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingresss
  namespace: longhorn-system
spec:
  ingressClassName: nginx
  rules:
  - host: "longhorn.minikube.home.lab"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
---
